objects/ASI_MFM_SKU_Code__c.object
<CustomObject>
    <description>Shared SKU object with ASI countries</description>
    <fields>
        <fullName>ASI_CRM_Alcohol_Degree__c</fullName>
        <label>Alcohol Degree</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Allow_Back_Rebates_Manually__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Back Rebates Manually</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Allow_Back_Rebates__c</fullName>
        <formula>OR(
 ASI_CRM_Preset__c ,
 ASI_CRM_Allow_Back_Rebates_Manually__c,
 AND(
  ASI_MFM_Sub_brand__r.ASI_CRM_Allow_Back_Rebates__c ,
  ASI_CRM_Regular_Size__c
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Back Rebates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Barcode__c</fullName>
        <label>Bottle Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BottlingDateFormatBottleCmts__c</fullName>
        <label>Bottling Date Format On Bottle Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BottlingDateFormatOnCaseComments__c</fullName>
        <label>Bottling Date Format On Case Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottling_Date_Format_On_Bottle__c</fullName>
        <label>Bottling Date Format On Bottle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YYYY/MM/DD</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottling_Date_Format_On_Case__c</fullName>
        <label>Bottling Date Format On Case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YYYY/MM/DD</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottling_Date_Position_On_Bottle__c</fullName>
        <label>Bottling Date Position On Bottle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cap</fullName>
                </value>
                <value>
                    <fullName>Upper part of the bottle</fullName>
                </value>
                <value>
                    <fullName>Lower part of the bottle</fullName>
                </value>
                <value>
                    <fullName>Neck</fullName>
                </value>
                <value>
                    <fullName>Label</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottling_Date_Position_On_Case__c</fullName>
        <label>Bottling Date Position On Case</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>Body</fullName>
                </value>
                <value>
                    <fullName>Bottom</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Box_Barcode__c</fullName>
        <label>Box Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_By_Pass_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>By Pass Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bypass_for_WS_Back_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass for WS Back Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cap__c</fullName>
        <label>Cap</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guala</fullName>
                </value>
                <value>
                    <fullName>Non-guala</fullName>
                </value>
                <value>
                    <fullName>Cork</fullName>
                </value>
                <value>
                    <fullName>Screw Cap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Case_Barcode__c</fullName>
        <label>Case Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Case_Size_LengthWidthHeight_cm3__c</fullName>
        <label>Case Size (Length*Width*Height) / cm3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Case_Size_LengthWidthHeight_mm3__c</fullName>
        <label>Case Size (Length*Width*Height) / mm3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Case_Weight_Kg__c</fullName>
        <label>Case Weight / Kg</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ice Bucket/冰筒</fullName>
                    <default>true</default>
                    <label>Ice Bucket/冰筒</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Country_Of_Origin__c</fullName>
        <label>Country Of Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Argentine</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Mexica</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Effective_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>The date that the SKU takes effective (available for stock / operation). This field is for SKU Group update.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ex_Price__c</fullName>
        <label>Ex Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_HK_Pricing_Category__c</fullName>
        <label>Pricing Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Information_Status__c</fullName>
        <label>Information Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting BO Product Information</fullName>
                </value>
                <value>
                    <fullName>Waiting Product launch Date (Sell-in)</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ingredient_List__c</fullName>
        <label>Ingredient List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Is_Stock_out_SKU__c</fullName>
        <formula>ASI_HK_CRM_Available_Quantity__c &lt;  ASI_HK_CRM_Packaging_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Stock-out SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Description1__c</fullName>
        <description>For JP CRM3</description>
        <label>Item Description 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Description2__c</fullName>
        <label>Item Description 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group_Code__c</fullName>
        <formula>ASI_MFM_Item_Group__r.ASI_MFM_Item_Group_Code__c</formula>
        <label>Item Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JAN_Code__c</fullName>
        <label>JAN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Active_for_DSS_ETS_NMS_SPS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For JP CRM3</description>
        <label>Active for JP Sales DSS/ETS/NMS/SPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Active_for_Emp_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For JP CRM3</description>
        <label>Active for JP Employee SO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Active_for_JP_Marketing_FOC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For JP CRM3</description>
        <label>Active for JP Marketing FOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_English_Name__c</fullName>
        <label>English Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sales_SKU_English_Name__c</fullName>
        <label>English SKU Description (SFDC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Sales_SKU_Name__c</fullName>
        <label>SKU Description (SFDC)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Latest_Vintage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Vintage</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>SKUs</relationshipLabel>
        <relationshipName>ASI_CRM_Latest_Vintage1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Local_Re_label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Re-label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Location_Owner_JDE__c</fullName>
        <label>Location Owner (JDE)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Minimum_Sales_Cases__c</fullName>
        <label>Minimum Sales (Cases)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Missing_PricesForWSBackRebate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>System will check if W1 and W2 prices exist.</inlineHelpText>
        <label>Missing Prices for WS Back Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Need_Check_for_SKU_Group__c</fullName>
        <defaultValue>true</defaultValue>
        <description>System field for SKU Group effectiveness checking. If checked, system will cross check SKU group and effective date to decide to update the the SKU Group</description>
        <inlineHelpText>For SKU Group effectiveness checking.</inlineHelpText>
        <label>Need Check for SKU Group?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Next_Version_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next Version SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>SKUs (Next Version SKU)</relationshipLabel>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Photo_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Photo Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Preset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Product_lanuch_Date_Sell_in__c</fullName>
        <label>Product lanuch Date (Sell-in)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Regular_Size__c</fullName>
        <formula>AND(ASI_HK_CRM_Std_Bottle_Size__c &gt; 65, ASI_HK_CRM_Std_Bottle_Size__c &lt; 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regular Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Representative_SKU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Representative SKU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SCA_SKU_Group__c</fullName>
        <label>SCA SKU Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SDP_Code__c</fullName>
        <label>SDP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_IGC_Cost_Per_9Lc__c</fullName>
        <label>IGC Cost Per 9Lc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_IGC_Cost_Per_case__c</fullName>
        <label>IGC Cost Per case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Selling_Price_Per_Btl_PRS_WS__c</fullName>
        <label>Selling Price Per Btl (PRS - WS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Selling_Price_Per_Btl_WS_On__c</fullName>
        <label>Selling Price Per Btl (WS - On Trade)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Wine_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wine Category</label>
        <referenceTo>ASI_CRM_SG_Wine_Category__c</referenceTo>
        <relationshipLabel>SKUs</relationshipLabel>
        <relationshipName>ASI_CRM_SG_SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Group_Code__c</fullName>
        <label>SKU Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>SKU Group holds all the relationship of old / new SKUs.</inlineHelpText>
        <label>SKU Group</label>
        <referenceTo>ASI_CRM_SKU_Group__c</referenceTo>
        <relationshipLabel>Related SKUs</relationshipLabel>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Status__c</fullName>
        <label>SKU Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>000</fullName>
                </value>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>997</fullName>
                </value>
                <value>
                    <fullName>998</fullName>
                </value>
                <value>
                    <fullName>TBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Type__c</fullName>
        <label>SKU Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On-going</fullName>
                </value>
                <value>
                    <fullName>One-shot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Selectable_In_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selectable In Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Short_Description__c</fullName>
        <formula>IF(ASI_HK_CRM_English_Name__c = &quot;.&quot;, &quot;.&quot;, ASI_HK_CRM_English_Name__c + &quot; - &quot; +  ASI_MFM_SKU_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Standard_Cost__c</fullName>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Std_Bottle_Size__c</fullName>
        <label>Std. Bottle Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand_Description__c</fullName>
        <formula>ASI_MFM_Sub_brand__r.ASI_MFM_Sub_brand_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Brand Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRT</fullName>
                </value>
                <value>
                    <fullName>Diageo</fullName>
                </value>
                <value>
                    <fullName>Matisse</fullName>
                </value>
                <value>
                    <fullName>Maxxium</fullName>
                </value>
                <value>
                    <fullName>WGS</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>Remy</fullName>
                </value>
                <value>
                    <fullName>Spey</fullName>
                </value>
                <value>
                    <fullName>Suntory</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Current_Stock__c</fullName>
        <label>Current Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Unit_Weight_Kg__c</fullName>
        <label>Unit Weight (kg)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wine_Category_Digit__c</fullName>
        <formula>if( ISBLANK(TEXT(ASI_MFM_Sub_brand__r.ASI_CRM_Wine_Category_Group__c) ),
  &apos;&apos;,
  if ( ISPICKVAL(ASI_MFM_Sub_brand__r.ASI_CRM_Wine_Category_Group__c, &apos;Wine&apos;),
    LEFT(ASI_MFM_SKU_Code__c  , 5) ,
    if ( ISPICKVAL(ASI_MFM_Sub_brand__r.ASI_CRM_Wine_Category_Group__c, &apos;Champagne&apos;) ,
      LEFT(ASI_MFM_SKU_Code__c  , 3),
      &apos;&apos;
    )
  )
)</formula>
        <label>Wine Category Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>FOC Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Alternate_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SKUs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Brand_Director_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand Director Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_ID_15__c</fullName>
        <formula>LEFT( Id , 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID(15)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Inventory__c</fullName>
        <label>FOC Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Is_Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Location_Item_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location(Item Owner)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Packing_Description__c</fullName>
        <label>Packing Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SKU_Chinese_Description__c</fullName>
        <label>SKU Chinese Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SRP0__c</fullName>
        <label>Fastar for CCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Stock_Price__c</fullName>
        <label>Stock Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Available_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ProductPack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_External_Short_ID__c</fullName>
        <label>External Short ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Inventory__c</fullName>
        <label>Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_IsPOSProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPOSProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Marketing_Info__c</fullName>
        <label>Marketing Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Pack_Factor__c</fullName>
        <label>Pack Factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Packaging_Size__c</fullName>
        <label>Packaging Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Brand</label>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_Pack_Code__c</fullName>
        <label>Product Pack Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_Pack__c</fullName>
        <externalId>true</externalId>
        <label>Product Pack</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_Shot__c</fullName>
        <label>Product Shot</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Std_Bottle_Size__c</fullName>
        <label>Std. Bottle Size (Cl)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Tasting_Notes__c</fullName>
        <label>Tasting Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_UOM1__c</fullName>
        <description>For HK CRM POS Sales Orders</description>
        <label>UOM1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_UOM2__c</fullName>
        <description>For HK CRM POS Sales Orders</description>
        <label>UOM2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_VUOM__c</fullName>
        <description>For HK CRM POS Sales Orders</description>
        <label>VUOM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>SKUs</relationshipLabel>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU_Code__c</fullName>
        <label>SKU Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU_Description__c</fullName>
        <label>SKU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_SKU_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>SKU External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipName>SKU_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Brand_Code__c</fullName>
        <formula>ASI_MFM_Sub_brand__r.ASI_TH_CRM_Brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Brand_Name__c</fullName>
        <formula>ASI_MFM_Sub_brand__r.ASI_MFM_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>ASI_TH_CRM_Category__c</referenceTo>
        <relationshipLabel>SKUs</relationshipLabel>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Hamper_Product__c</fullName>
        <label>Hamper Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Physical_Bottle_Size__c</fullName>
        <label>Physical Bottle Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>ASI_TH_CRM_Segment__c</referenceTo>
        <relationshipLabel>SKUs</relationshipLabel>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_brand_Code__c</fullName>
        <formula>ASI_MFM_Sub_brand__r.ASI_MFM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-category</label>
        <referenceTo>ASI_TH_CRM_Sub_category__c</referenceTo>
        <relationshipLabel>SKUs</relationshipLabel>
        <relationshipName>SKUs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SKU</label>
    <listViews>
        <fullName>ALL_HK_CRM_SKU</fullName>
        <columns>ASI_MFM_SKU_Code__c</columns>
        <columns>NAME</columns>
        <columns>ASI_HK_CRM_English_Name__c</columns>
        <columns>ASI_FOC_Packing_Description__c</columns>
        <columns>ASI_MFM_Sub_brand__c</columns>
        <columns>ASI_HK_CRM_Product_Brand__c</columns>
        <columns>ASI_HK_CRM_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_SKU_Code__c.ASI_HK_CRM_SKU</value>
        </filters>
        <filters>
            <field>ASI_MFM_SKU_Code__c</field>
            <operation>contains</operation>
            <value>BB</value>
        </filters>
        <label>ALL HK CRM_SKU</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
</CustomObject>